# Sentinel

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: rules.json  rules.schema.json
docs/: anomaly-detection.md  configuration.md  dashboard.md  getting-started.md  langchain-integration.md
examples/: anomaly_test.py  basic_usage.py  dashboard_test.py  langchain_usage.py  webhook_usage.py
scripts/: run_dashboard.py
src/sentinel/: __init__.py
src/sentinel/anomaly/: __init__.py  detector.py  llm_auditor.py  statistical.py
src/sentinel/approval/: __init__.py  base.py  terminal.py  webhook.py
src/sentinel/audit/: __init__.py  logger.py  models.py
src/sentinel/core/: __init__.py  exceptions.py  wrapper.py
src/sentinel/dashboard/: __init__.py  __main__.py  api.py  app.py  state.py
src/sentinel/integrations/: __init__.py  langchain.py
src/sentinel/rules/: __init__.py  engine.py
tests/: mock_webhook_server.py  test_anomaly.py  test_approval.py  test_audit.py  test_context.py  test_dashboard.py  test_langchain.py  test_rules_engine.py  test_webhook.py  test_wrapper.py
tests/fixtures/: sample_rules.json
